Updated by task 'AutomatedMDTask_1684262817031_TM-MT_1684262850878'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/88784f4c86ea8ab248d75be1dce4815f11bfc95e

--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -5,8 +5,9 @@ doc-type: release notes
 last-update: March 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: d3cadefbfc28edbc62fd90cb49991c9837744e5e
-workflow-type: ht
+exl-id: bff918b2-1f21-4375-af54-312347de0b2f
+source-git-commit: d04a529ee7142df7e003c0c9d74d4ee3741dcedc
+workflow-type: tm+mt
 source-wordcount: '4667'
 ht-degree: 100%
 
@@ -26,7 +27,7 @@ ht-degree: 100%
 
 **需要協助嗎?**
 
-您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/?lang=en#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=en)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/?lang=en#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/?lang=en#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/?lang=en#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -67,13 +68,13 @@ ht-degree: 100%
 
 * **[!DNL Adobe Summit]**|_全年重訪 Summit！_ | **隨選即播** | [詳細資訊](https://business.adobe.com/summit/adobe-summit.html)
 
-請查看[Experience League 活動](https://experienceleague.adobe.com/events/?lang=en)取得即將到來的活動和隨選即播的過去活動的完整時間表。
+請查看 [Experience League 活動](https://experienceleague.adobe.com/events/?lang=en)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
 ## ![圖示](/assets/certification-badge.png)認證{#certification}
 
-請注意，所有 Adobe 認證候選者！Adobe 很高興地宣布在 Experience League 推出新的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en)網站。
+請注意，所有 Adobe 認證候選者！Adobe 很高興地宣布在 Experience League 推出新的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=zh-Hant)網站。
 
 +++詳細資訊
 
@@ -83,7 +84,7 @@ ht-degree: 100%
 * Adobe 解決方案的認證續約
 * 認證方案更新
 
-及更多內容！前往 Experience League 上的[Adobe 認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en)，立即開始您的認證之旅！
+及更多內容！前往 Experience League 上的 [Adobe 認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=zh-Hant)，立即開始您的認證之旅！
 
 +++
 
@@ -125,7 +126,7 @@ _在 3 月未更新。_
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找[!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -239,8 +240,8 @@ For self-help resources, see [Audience Manager documentation and tutorials](http
 Adobe 建議您瀏覽以下資源以隨時掌握發行版本資訊：
 
 * [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
-* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html?lang=zh-Hant) - 觀看目前和過去版本的[!DNL Experience Manager as a Cloud Service]專題影片概述。
-* [Adobe Experience Manager as a Cloud Service 目前發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html?lang=zh-Hant) - 閱讀 [!DNL Experience Manager as a Cloud Service]最新發行說明。
+* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html?lang=zh-Hant) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概述。
+* [Adobe Experience Manager as a Cloud Service 目前發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html?lang=zh-Hant) - 閱讀 [!DNL Experience Manager as a Cloud Service] 最新發行說明。
 
 ### 最新版本概觀影片
 
@@ -250,13 +251,13 @@ Adobe 建議您瀏覽以下資源以隨時掌握發行版本資訊：
 
 _新功能_
 
-* [!DNL Experience Manager] GraphQL 內容傳遞 API 現在支援 GraphQL [分頁](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=en#paging)和[排序](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=en#sorting)，以提高擷取和呈現大型內容集的效率。GraphQL 分頁以子集傳回結果而非一次全部傳回來縮短查詢回應時間。GraphQL 排序使您可以按所需順序放置內容集，從而使用戶端應用程式更容易處理內容。[!DNL Experience Manager] GraphQL 引擎中的混合篩選可進一步改進查詢回應時間。現在以與查詢篩選器相對應的較小集合的形式從 JCR 讀取內容。
+* [!DNL Experience Manager] GraphQL 內容傳遞 API 現在支援 GraphQL [分頁](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=zh-Hant#paging)和[排序](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=zh-Hant#sorting)，以提高擷取和呈現大型內容集的效率。GraphQL 分頁以子集傳回結果而非一次全部傳回來縮短查詢回應時間。GraphQL 排序使您可以按所需順序放置內容集，從而使用戶端應用程式更容易處理內容。[!DNL Experience Manager] GraphQL 引擎中的混合篩選可進一步改進查詢回應時間。現在以與查詢篩選器相對應的較小集合的形式從 JCR 讀取內容。
 
 ### [!DNL Experience Manager Assets] as a [!DNL Cloud Service]
 
 _新功能_
 
-* 資產報告現在可讓管理員從 [!DNL Experience Manager Assets] as a [!DNL Cloud Service] 部署[產生資產下載報告](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/admin/asset-reports.html?lang=en)。此資料可進一步讓管理員從關鍵成功量度取得深入見解，以衡量企業內和客戶對資產的採用程度。
+* 資產報告現在可讓管理員從 [!DNL Experience Manager Assets] as a [!DNL Cloud Service] 部署[產生資產下載報告](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/admin/asset-reports.html?lang=zh-Hant)。此資料可進一步讓管理員從關鍵成功量度取得深入見解，以衡量企業內和客戶對資產的採用程度。
 * [!DNL Experience Manager Assets]除了在連接到 Azure Blob 儲存體資料來源以使用大量匯入工具擷取資產時支援用於驗證的存取金鑰之外，現在還[支援 SAS 權杖](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html?lang=zh-Hant#asset-bulk-ingestor)。
 * 改進 Asset Compute 中 CMYK 影像的管理，讓您可以為 CMYK 影像產生智慧型裁切和智慧型標記。
 
@@ -268,20 +269,20 @@ _發行前管道中可用的新功能_
 
 _新功能_
 
-* **[可產生非互動式 PDF 文件和可列印輸出的工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=en)** - 使用 [!DNL Experience Manager] 工作流程步驟，將業務流程的非互動式 PDF 文件和可列印輸出建立工作自動化，簡化您文件產生程序並節省時間。
-* **[使用腳註在調適型表單中提供引述或額外資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/footnotes-richtextsupport.html?lang=en)** - 在調適型表單中使用腳註來顯示有關如何完成或使用表單的資訊。您還可以使用它來提供附加資訊、版權許可和其他有用的資訊。
+* **[可產生非互動式 PDF 文件和可列印輸出的工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=zh-Hant)** - 使用 [!DNL Experience Manager] 工作流程步驟，將業務流程的非互動式 PDF 文件和可列印輸出建立工作自動化，簡化您文件產生程序並節省時間。
+* **[使用腳註在最適化表單中提供引述或額外資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/footnotes-richtextsupport.html?lang=zh-Hant)** - 在最適化表單中使用腳註來顯示有關如何完成或使用表單的資訊。您還可以使用它來提供附加資訊、版權許可和其他有用的資訊。
 
 
 _發行前管道中可用的新功能_
 
-* [使用資料擷取核心元件以建置調適型表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html?lang=en) – [使用調適型表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html?lang=en)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。
-* [前端管道支援設計以核心元件為基礎之調適型表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html?lang=en) – 通過使用前端部署管道部署，為以核心元件為基礎之調適型表單使用易於自訂的 BEM 型主題，以增強表單的外觀和風格。
-* [為以核心元件為基礎之調適型表單產生成記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html?lang=en) – 為以核心元件為基礎之調適型表單建立記錄，以提交供長期封存，採列印或文件格式。
-* [將調適型表單提交到 Microsoft® SharePoint 和 Microsoft® OneDrive](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/configure-submit-actions-and-metadata-submission/configuring-submit-actions.html?lang=en) – 簡化資料提交作業，能夠將調適型表單直接傳送到 Microsoft® SharePoint 和 Microsoft® OneDrive。您可以提交具結構描述的資料和無結構描述的資料。這些提交動作是對已經可用的提交動作的補充。
-* [使用將調適型表單另存為模板功能來提升表單建置效率](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html?lang=en#save-an-adaptive-form-as-template-saving-adaptive-form-as-template) – 將調適型表單另存為模板，並在建置下一個調適型表單時重複使用模板，藉此簡化表單建置程序。
-* [連接 [!DNL Experience Manager Forms] 到支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=en#configure-relational-database-configure-relational-database) – 輕鬆連接將 [!DNL Experience Manager Forms] 資料模型連接到支援 JDBC 的資料庫，讓您順暢讀寫資料。
-* [使用 Open API 3.0 與 REST 端點相整合](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=en#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30) – 將 [!DNL Experience Manager Forms] as a [!DNL Cloud Service] 表單資料模型連接到支援 Open API 規格版格 3.0 的 REST 端點，讓您輕鬆傳送和接收資料。
-* [共用調適型表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html?lang=en) – 使用調適型表單審閱機制讓一個或多個人員審閱表單。
+* [使用資料擷取核心元件以建置最適化表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html?lang=zh-Hant) – [使用最適化表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html?lang=zh-Hant)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。
+* [前端管道支援設計以核心元件為基礎之最適化表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html?lang=zh-Hant) – 通過使用前端部署管道部署，為以核心元件為基礎之最適化表單使用易於自訂的 BEM 型主題，以增強表單的外觀和風格。
+* [為以核心元件為基礎之最適化表單產生成記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html?lang=zh-Hant) – 為以核心元件為基礎之最適化表單建立記錄，以提交供長期封存，採列印或文件格式。
+* [將最適化表單提交到 Microsoft® SharePoint 和 Microsoft® OneDrive](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/configure-submit-actions-and-metadata-submission/configuring-submit-actions.html?lang=zh-Hant) – 簡化資料提交作業，能夠將最適化表單直接傳送到 Microsoft® SharePoint 和 Microsoft® OneDrive。您可以提交具結構描述的資料和無結構描述的資料。這些提交動作是對已經可用的提交動作的補充。
+* [使用將最適化表單另存為模板功能來提升表單建置效率](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html?lang=zh-Hant#save-an-adaptive-form-as-template-saving-adaptive-form-as-template) – 將最適化表單另存為模板，並在建置下一個最適化表單時重複使用模板，藉此簡化表單建置程序。
+* [連接 [!DNL Experience Manager Forms] 到支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=zh-Hant#configure-relational-database-configure-relational-database) – 輕鬆連接將 [!DNL Experience Manager Forms] 資料模型連接到支援 JDBC 的資料庫，讓您順暢讀寫資料。
+* [使用 Open API 3.0 與 REST 端點相整合](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=zh-Hant#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30) – 將 [!DNL Experience Manager Forms] as a [!DNL Cloud Service] 表單資料模型連接到支援 Open API 規格版本 3.0 的 REST 端點，讓您輕鬆傳送和接收資料。
+* [共用最適化表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html?lang=zh-Hant) – 使用最適化表單審閱機制讓一個或多個人員審閱表單。
 
 ### CIF 附加元件
 
@@ -296,7 +297,7 @@ _新功能_
 
 _新功能_
 
-* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=en) – RDE 讓開發人員可以快速解決問題並在 [!DNL Experience Manager] as a [!DNL Cloud Service] 部署新功能。
+* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=zh-Hant) – RDE 讓開發人員可以快速解決問題並在 [!DNL Experience Manager] as a [!DNL Cloud Service] 部署新功能。
 
    快速開發環境是一種新型雲端環境，用於以快速、一致和可擴展的方式來驗證在本機運作的程式碼在雲端是否也能正常運作。使用命令列工具，可以快速將內容套件、套件組合、內容檔案、OSGI 設定或 Dispatcher 設定同步到 RDE。
 
@@ -314,8 +315,8 @@ _新功能_
 
 _新功能_
 
-* 使用者可以從 UI 下載[自訂 UI 測試](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/ui-testing.html?lang=en)的結果。
-* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=en) (RDE) 是一種新型雲端環境，用於以快速、一致和可擴展的方式來驗證在本機運作的程式碼在雲端是否也能正常運作。
+* 使用者可以從 UI 下載[自訂 UI 測試](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/ui-testing.html?lang=zh-Hant)的結果。
+* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=zh-Hant) (RDE) 是一種新型雲端環境，用於以快速、一致和可擴展的方式來驗證在本機運作的程式碼在雲端是否也能正常運作。
    * RDE 使開發人員能夠快速解決問題並在 [!DNL Experience Manager] as a [!DNL Cloud Service] 部署新功能。
    * 使用命令列工具，開發人員可以快速將內容套件、套件組合、內容檔案、OSGi 設定或 Dispatcher 設定同步到 RDE。
 
@@ -548,7 +549,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 ### Marketo Engage 核心更新
 
 * 如需最新資訊，請參閱 [2023 年 3 月 - 最新發行資訊](https://experienceleague.adobe.com/docs/marketo/using/release-notes/current.html?lang=zh-Hant)
-* 如需最新發行排程資訊和發行說明，請參閱[!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)。
+* 如需最新發行排程資訊和發行說明，請參閱 [!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)。
 
 <!-- ### New Marketo tutorials and courses {#tutorials-marketo}
 
@@ -629,7 +630,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | ([!DNL Microsoft Advertising]對象行銷活動；公開 Beta 版功能；3 月 18 日發行) 對象行銷活動現在可以使用增強型 CPC (eCPC) 出價策略。您可以在子廣告群組設定中設定出價。<br><br>具有 eCPC 的對象行銷活動可以包含在產品組合中以最佳化。 |
+| [!UICONTROL 行銷活動] | ([!DNL Microsoft Advertising] 對象行銷活動；公開 Beta 版功能；3 月 18 日發行) 對象行銷活動現在可以使用增強型 CPC (eCPC) 出價策略。您可以在子廣告群組設定中設定出價。<br><br>具有 eCPC 的對象行銷活動可以包含在產品組合中以最佳化。 |
 | [!UICONTROL 行銷活動]、[!UICONTROL 產品組合] | ([!DNL Google Ads] 帳戶；公開 Beta 版功能) [!DNL Google Ads] 最高成效行銷活動現在可使用最佳化支援，您可以將其新增到混合產品組合中。出價策略目標和行銷活動預算是在行銷活動層級設定的。 |
 | [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶；3 月 18 日發行) 行銷活動管理檢視和報告中提供了以下新的「顯眼程度」量度：<ul><li><p>[!UICONTROL 內容是]：您在顯示/對象網路上獲得的曝光數除以您有資格獲得的預計廣告曝光數。</p><p>這個和其他「[!UICONTROL 內容]*」量度可用於與內容廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]和[!UICONTROL 產品組合]。</p></li><li><p>[!UICONTROL 內容遺失是 (預算)]：由於您的每日或每月預算過低，您的廣告在顯示/對象網路上未獲得之曝光數的估計百分比。<p></li><li><p>[!UICONTROL 內容遺失是 (排名)]：由於排名不佳，您的廣告在顯示/對象網路上未獲得之曝光數的估計百分比。</p></li><li><p>[!UICONTROL 完全相符搜尋是]：與您的關鍵字完全相符之搜尋所獲得的曝光數除以您有資格獲得的估計完全相符曝光數。</p><p>這個量度可用於與搜尋廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]、[!UICONTROL 關鍵字]、[!UICONTROL 產品群組]和[!UICONTROL 產品組合]。它們也位在[!UICONTROL 規範]、[!UICONTROL 標籤分類]和[!UICONTROL 標籤值]報告中。</p></li></ul> |
 
@@ -691,4 +692,3 @@ See [Creative Cloud for enterprise tutorials](https://experienceleague.adobe.com
 | -----------| ---------- | ---------- | ---------- |
 |January 2023|[Customer Journeys - AEP + Apps & AJO Architecture](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/customer-journeys/overview.html?lang=en)|Diagram updates|Deliver individual, just-in-time customer experiences across screens.| 
 -->
-
