Updated by task 'MD_MANUAL_HANDOFF_1684950024734_TM-MT_1684950823791'

--- a/c-legacy-releases/2020/02202020.md
+++ b/c-legacy-releases/2020/02202020.md
@@ -6,7 +6,7 @@ last-update: February 2020
 author: mfrei
 exl-id: e98e1c59-7eda-4dd1-a3f0-7909af2e0e5e
 source-git-commit: 84d7f170ab65f3f774d6e0f97456c58c6ba7a5dd
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '2747'
 ht-degree: 100%
 
