--- a/c-legacy-releases/2020/04162020.md
+++ b/c-legacy-releases/2020/04162020.md
@@ -6,7 +6,7 @@ last-update: March 2020
 author: mfrei
 exl-id: 1fa612a4-8558-4926-8395-b66566ea253a
 source-git-commit: 84d7f170ab65f3f774d6e0f97456c58c6ba7a5dd
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '3074'
 ht-degree: 100%
 
@@ -117,7 +117,7 @@ iOS 4.19.0 (2020 年 3 月 10 日)：
 
 * [Customer Journey Analytics](#cust-journey)
 
-<!--* [New features in Adobe Analytics](#aa-features)-->
+   <!--* [New features in Adobe Analytics](#aa-features)-->
 * [Analytics 管理員重要事項](#aa-notices) (2020 年 4 月 7 日更新)
 * [AppMeasurement](#appm)
 * [全新 Analytics 教學課程](#tutorials-analytics)
