--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -689,7 +689,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 對象行銷活動；4 月 15 日發行) 對象行銷活動現在可以使用「手動 CPM」競標策略。您可以在子廣告群組設定中設定出價。<br><br>CPM促銷活動不提供最佳化支援。 |
+| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 對象行銷活動；4 月 15 日發行) 對象行銷活動現在可以使用「手動 CPM」競標策略。您可以在子廣告群組設定中設定出價。<br><br>CPM行銷活動不提供最佳化支援。 |
 | [!UICONTROL Recommendations] | 六個新 ([!DNL Google Ads] 建議可從 [!UICONTROL Insights &amp; Reports] > [!UICONTROL Recommendations] 取得：<ul><li>[!UICONTROL 回應式搜尋提高廣告強度]：關於提高回應式搜尋廣告之廣告強度的建議</li><li>[!UICONTROL 將本地行銷活動升級到最高成效]：將舊版本地行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 將智慧購物行銷活動升級到最高成效]：將舊版智慧購物行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 預測設定的 Target ROAS]：在預計會增加流量的季節性活動之前提高預算，並將競標策略從[!DNL Maximize Conversion Value] 變更到 [!DNL Target ROAS]</li><li>[!UICONTROL 提高太低的 Target CPA 競標]：當 [!DNL Target CPA] 太低且很少或沒有轉換時，按建議量提高。</li><li>[!UICONTROL 顯示擴展選擇加入]：更新行銷活動以使用顯示擴展來擴大觸及率</li></ul>由於新增和刪除資產、變更行銷活動類型以及變更預算和競標策略都會影響成效，因此我們建議您與 Adobe 客戶團隊討論每項建議的利弊，以便您做出明智的決定。 |
 
 {style="table-layout:auto"}
