--- a/c-legacy-releases/2020/01162020.md
+++ b/c-legacy-releases/2020/01162020.md
@@ -6,7 +6,7 @@ last-update: January 2020
 author: mfrei
 exl-id: 5626daea-467d-452d-84f4-f97f15dfb2d1
 source-git-commit: 84d0b9340be221e11c0a6c5b3c06785b4945b640
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '3417'
 ht-degree: 100%
 
