--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -6,7 +6,7 @@ last-update: September 2020
 author: mfrei
 exl-id: e652b5bf-d209-4eeb-89fc-af584939d5c5
 source-git-commit: d397fe8a435cf411147e773ee11c34c29ecf7f5b
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '6568'
 ht-degree: 100%
 
@@ -116,14 +116,14 @@ Adobe Experience Platform 現有功能更新：
 
 ### Adobe Analytics 新功能 {#aa-features}
 
-| 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=zh-Hant) - 目標日期 | 說明 |
+| 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) - 目標日期 | 說明 |
 | ----------- | ---------- | ------- |
 | [!UICONTROL 跨裝置分析]：歐洲、中東和非洲地區及亞太地區的上市情況 | 2020 年 8 月 31 日 | 歐洲、中東和非洲地區及亞太地區皆已推出[跨裝置分析](https://experienceleague.adobe.com/docs/analytics/components/cda/overview.html)和私密圖表，供客戶使用。 |
 | 改良[!UICONTROL 跨裝置分析]的欄位結合功能 (全球適用) | 2020 年 8 月 31 日 | 透過這套簡化的[!UICONTROL 跨裝置分析]新客戶實作方案，您可選擇根據 Analytics 欄位 (prop 或 eVar) 所儲存的使用者 ID，執行結合作業，而不使用裝置圖表 (co-op 或私密圖表)。此增強功能移除了實作 ECID 與以 CDA 為目的而實作 ID 同步的需求(部分功能仍需同步 ECID 和 ID)。 |
 | 蒐集中國資料 (第 2 階段) | 2020 年 9 月 1 日 | 擴大支援第一方 SSL。 |
 | 工作區新增日期範圍 | 2020 年 9 月 10 日 | 新增 5 個日期範圍，您可以選擇以下日期範圍，排除不完整的當天資料：過去 7 天、過去 14 天、過去 30 天、過去 60 天、過去 90 天 |
 | 工作區：下載單一維度的 50,000 個項目 | 2020 年 9 月 17 日 | 您將能以自由格式表格，針對單一維度下載 50,000 個項目，並套用區段和篩選條件。這可讓您存取 Analysis Workspace 以外超過 400 列的資料。[更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/download-send.html#download-items) |
-| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺化效果的 x 軸與 y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html) |
+| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺化效果的 x 軸與 y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [了解更多...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html?lang=zh-Hant) |
 
 ### Customer Journey Analytics 新功能 {#cust-journey}
 
@@ -132,7 +132,7 @@ Adobe Experience Platform 現有功能更新：
 | Customer Journey Analytics 權限異動 | 2020 年 9 月 9 日 | CJA 不再將所有使用者一律視為管理員。下列動作僅限在 [Adobe Admin Console](https://experienceleague.adobe.com/docs/core-services/interface/manage-users-and-products/admin-getting-started.html?lang=zh-Hant) 中獲派為產品管理員的使用者執行：<ul><li>建立/更新/刪除[!UICONTROL 連線]或[!UICONTROL 資料檢視]</li><li>更新/刪除其他使用者建立的專案、篩選條件或計算量度</li><li>將工作區專案與所有使用者共用</li></ul>[更多詳情...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-overview/cja-overview.html#admin-access-permissions) |
 | 支援[!UICONTROL 異常偵測] | 2020 年 9 月 10 日 | [!UICONTROL 異常偵測]可協助您識別真正重要的統計波動。[!UICONTROL Customer Journey Analytics] 現已支援此功能。 |
 | 工作區新增日期範圍 | 2020 年 9 月 10 日 | 新增 5 個日期範圍，您可以選擇以下日期範圍，排除不完整的當天資料：[!UICONTROL 過去 7 天]、[!UICONTROL 過去 14 天]、[!UICONTROL 過去 30 天]、[!UICONTROL 過去 60 天]、[!UICONTROL 過去 90 天] |
-| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺化效果的 x 軸與 y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [更多詳情...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/visualizations/line.html) |
+| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺化效果的 x 軸與 y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [了解更多...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/visualizations/line.html) |
 
 ### [!UICONTROL Media Analytics] 新功能 {#media-aa}
 
@@ -351,7 +351,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 * [AEM as a Cloud Service 發行資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/release-notes/home.html)
 * [AEM Cloud Manager 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/using/release-notes/release-notes-current.html)
 * [Automated Forms Conversion Service 版本注意事項](https://experienceleague.adobe.com/docs/aem-forms-automated-conversion-service/using/release-notes.html)
-* [AEM 6.5 Service Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/service-pack/sp-release-notes.html?lang=zh-Hant)
+* [AEM 6.5 Service Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/service-pack/sp-release-notes.html)
 * [AEM 6.4 Cumulative Fix Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html?lang=zh-Hant)
 * [AEM Assets Dynamic Media 版本注意事項](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/release-notes/s7rn2017.html)
 * [AEM Brand Portal 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
