Updated by task 'AutomatedMDTask_1685091876560_TM-MT_1685091880318'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/3e94817bf76aa347697d498ddf708d370c6594b4

--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -13,7 +13,7 @@ ht-degree: 100%
 
 ---
 
-# Experience Cloud 發行說明 - 2023 年 3 月
+# Experience Cloud 版本注意事項 - 2023 年 3 月
 
 ![橫幅](assets/release-notes-header.png)
 
